<resources>
    <string name="app_name">icnclient</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_persona">Personal</string>
    <string name="text_company">Empresa</string>
    <string name="create_account">Crear cuenta</string>
    <string name="sign_in_button">Iniciar sesión</string>

    <string name="login_title">Iniciar sesión</string>
    <string name="login_username">Correo</string>
    <string name="password">Contraseña</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="forgot_password">Olvidé mi contraseña</string>
    <string name="password_recovery">Recuperar contraseña</string>
    <string name="text_email">Correo</string>
    <string name="text_send">Enviar</string>
    <string name="text_code">Código</string>
    <string name="text_edit">Editar</string>
    <string name="text_save">Guardar</string>
    <string name="text_phone">Celular</string>
    <string name="text_gender">Género</string>
    <string name="text_age">Edad</string>
    <string name="text_document_type">Tipo de documento</string>
    <string name="text_dni">DNI</string>
    <string name="text_passport">Pasaporte</string>
    <string name="text_document_number">Número de documento</string>
    <string name="text_gallery">Galería</string>
    <string name="text_camera">Cámara</string>
    <string name="text_logout">Cerrar sesión</string>
    <string name="category_nurse">Procedimientos \n de enfermería</string>
    <string name="category_technician">Personal de enfermería \n Técnico de enfermería</string>

    <string name="category_technician_text">Personal de \n enfermería o Técnico \n de enfermería</string>

    <string name="text_name">Nombres</string>
    <string name="text_surname">Apellidos</string>

    <string name="login_button">Ingresar</string>
    <string name="login_facebook_button">Ingresar con</string>

    <string name="services_title">Solicitar servicio</string>
    <string name="services_material_title">¿Posee material?</string>
    <string name="services_schedule_title">¿Cuándo?</string>

    <string name="button_next">Siguiente</string>
    <string name="button_generate">Generar</string>
    <string name="button_confirm">Confirmar</string>
    <string name="custom_dialog_text">Recuerda que para realizar los procesos de enfermería necesitas los materiales
        mencionados.
    </string>
    <string name="custom_dialog_other">Comuníquese con nosotros \n al +51923187226 para \n indicarle los medicamentos \n
        que debe tener
    </string>
    <string name="dialog_register_text">Para mayor \n información \n comuníquese con</string>

    <string name="title_month">Mes</string>
    <string name="title_schedule">Recordar</string>
    <string name="add_new_service">Agregar otro servicio</string>
    <string name="title_substances">Sustancias</string>
    <string name="title_turn">Turno</string>
    <string name="title_price">Precio</string>
    <string name="title_hour">Hora</string>
    <string name="title_personal">Personal</string>
    <string name="text_nurses">Enfermeras</string>
    <string name="text_technicians">Técnicos</string>
    <string name="text_payment_method">Método de pago</string>
    <string name="text_cards">Tarjetas</string>
    <string name="text_add_card">Agregar nueva tarjeta</string>
    <string name="text_address">Dirección</string>
    <string name="text_address_reference">Referencia de la dirección</string>
    <string name="text_pay">Pagar</string>
    <string name="text_yes">Sí</string>
    <string name="text_no">No</string>
    <string name="text_notification_dialog">¿Ha llegado a cumplir su jornada?</string>
    <string name="title_service_detail">Detalle del servicio</string>
    <string name="title_notifications">Califícame</string>
    <string name="text_notifications">Aún no has solicitado una enfermera o técnico</string>
    <string name="text_contact">Contáctanos</string>
    <string name="phone_contact">+51 377 9999</string>
    <string name="text_no_appointments">No tienes servicios pendientes</string>
    <string name="text_delete">Eliminar</string>
    <string name="text_generate">Generar</string>
    <string name="add_new_substance">Agregar sustancia</string>
    <string name="success_reservation_message">Nos contactaremos contigo \n para finalizar el servicio</string>
    <string name="text_ruc">RUC</string>
    <string name="text_business_name">Razón social</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
        aliquip ex ea commodo consequat.
    </string>
    <string name="actionBar_title">Mis reservas</string>

    <string-array name="months">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Setiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>

    <string-array name="schedule_types">
        <item>Asignar por días</item>
        <item>Asignar a todo</item>
    </string-array>

    <string-array name="gender_list">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>

    <string-array name="turn_list">
        <item>Mañana</item>
        <item>Tarde</item>
        <item>Noche</item>
        <item>Mañana-Tarde</item>
        <item>Mañana-Tarde-Noche</item>
        <item>Tarde-Noche</item>
        <item>Noche-Mañana</item>
    </string-array>

    <string-array name="period_list">
        <item>12 hrs</item>
        <item>08 hrs</item>
        <item>06 hrs</item>
    </string-array>

    <string-array name="tabTitles">
        <item>AHORA</item>
        <item>PROGRAMADOS</item>
        <item>CULMINADOS</item>
    </string-array>

    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">
        AIzaSyAF1fhvKXWuMtps92pgEYFA5_qwzbvHoZY
    </string>

    <string name="facebook_app_id">498990974034950</string>
    <string name="fb_login_protocol_scheme">fb498990974034950</string>

    <!-- VALIDATION -->
    <string name="validation_empty">Por favor complete los campos vacíos</string>
    <string name="validation_email">Formato de correo incorrecto</string>
    <string name="validation_confirm_password">Las contraseñas no coinciden</string>
    <string name="validation_alphanumeric_password">Las contraseña tiene que ser alfanúmerica</string>
    <string name="validation_password_min_characters">La contraseña debe tener como mínimo de 6 caracteres</string>
    <string name="validation_service_type_hour">Debe de seleccionar un horario de atención</string>
    <string name="validation_service_type">Debe de seleccionar un tipo de servicio</string>
    <string name="validation_calendar_days">Debe de seleccionar al menos un día</string>
    <string name="validation_dni">Formato de DNI incorrecto</string>
    <string name="validation_pasaporte">Formato de pasaporte incorrecto</string>
    <string name="validation_credit_card">Debe de seleccionar una tarjeta</string>
    <string name="validation_ruc">Formato de RUC incorrecto</string>
    <string name="validation_phone_number">Formato de celular incorrecto</string>
    <string name="validation_blank_space">La contraseña no debe contener espacios en blanco</string>
    <string name="validation_max_days">Mínimo 1 día y máximo 2 días</string>
    <string name="validation_max_personal">Como máximo 2 enfermeras</string>
    <string name="validation_min_personal">Como mínimo 1 enfermera</string>
</resources>
