<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             tools:context=".features.account.views.fragments.LoginFragment">


    <RelativeLayout
            android:layout_marginTop="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/llMain"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/login_title"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp"/>

            <EditText
                    android:id="@+id/etName"
                    style="@style/TextField.Rounded"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/login_username"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="10dp"/>

            <EditText
                    android:id="@+id/etPWd"
                    style="@style/TextField.Rounded"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="8dp">
            <Button
                    android:id="@+id/btn_create_account"
                    style="@style/Button.Rounded.Accent"
                    android:text="@string/login_facebook_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/btn_log_in"
                    style="@style/Button.Rounded.Primary"
                    android:text="@string/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </LinearLayout>
    </RelativeLayout>

</layout>