<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewModel"
                  type="com.peruapps.icnclient.features.account.presentation.viewmodel.ForgotPasswordViewModel"/>
    </data>
    <RelativeLayout
            android:layout_marginTop="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".features.account.presentation.views.fragments.ForgotPasswordFragment">

        <TextView
                android:id="@+id/tv_title"
                style="@style/AccentText"
                android:fontFamily="@font/muli_bold"
                android:textSize="25sp"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_recovery"/>

        <EditText
                android:id="@+id/etEmail"
                android:layout_below="@+id/tv_title"
                style="@style/TextField.Rounded"
                android:hint="@string/text_email"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/muli_bold"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <Button
                style="@style/Button.Rounded.Primary"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="70dp"
                android:text="@string/text_send"
                android:textSize="20sp"
                android:onClick="@{ () -> viewModel.sendEmail() }"/>

    </RelativeLayout>
</layout>