<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CCFFFFFF">

    <LinearLayout
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_gravity="center"
                style="@style/PrimaryText"
                android:textSize="36sp"
                android:fontFamily="@font/muli_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_contact"/>

        <TextView
                android:layout_gravity="center"
                android:fontFamily="@font/muli_bold"
                style="@style/PrimaryText"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_contact"/>

        <TextView
                android:layout_gravity="center"
                android:textColor="@color/colorGray"
                android:fontFamily="@font/muli_bold"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_dialog_text"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnCLoseContactUs"
            android:background="?attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close_dialog"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"/>

</RelativeLayout>