<?xml version="1.0" encoding="utf-8"?>

<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable name="viewModel"
                  type="com.peruapps.icnclient.features.change_password.presentation.ChangePasswordViewModel"/>
    </data>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            tools:context=".features.change_password.presentation.ChangePasswordFragment">

        <RelativeLayout
                android:id="@+id/navigationBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="@{ () -> viewModel.onClickNavigationBack() }">

            <ImageView
                    android:id="@+id/nvBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_navigation_back"
                    android:tint="@color/colorAccent"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"/>

            <TextView
                    style="@style/PrimaryText"
                    android:layout_toEndOf="@+id/nvBack"
                    android:fontFamily="@font/muli_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password"
                    android:textSize="20sp"
                    android:layout_centerVertical="true"/>

        </RelativeLayout>

        <TextView
                style="@style/AccentText"
                android:textSize="18sp"
                android:fontFamily="@font/muli_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/password"/>

        <EditText
                style="@style/TextField.Rounded.Gray"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={ viewModel.currentPassword }"/>

        <TextView
                style="@style/AccentText"
                android:textSize="18sp"
                android:fontFamily="@font/muli_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_password"/>

        <EditText
                style="@style/TextField.Rounded.Gray"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={ viewModel.newPassword }"/>

        <TextView
                style="@style/AccentText"
                android:textSize="18sp"
                android:fontFamily="@font/muli_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"/>

        <EditText
                style="@style/TextField.Rounded.Gray"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={ viewModel.confirmPassword }"/>

        <ProgressBar
                android:visibility="@{ safeUnbox(viewModel.requestLoading) ? View.VISIBLE : View.GONE }"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <Button
                android:visibility="@{ safeUnbox(viewModel.requestLoading) ? View.GONE : View.VISIBLE }"
                style="@style/Button.Rounded.Primary"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="24sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_save"
                android:onClick="@{ () -> viewModel.onSaveClicked() }"/>

    </LinearLayout>

</layout>
