<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
                name="viewModel"
                type="com.peruapps.icnclient.features.register.presentation.RegisterViewModel"/>
    </data>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RelativeLayout
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgBack"
                    app:srcCompat="@drawable/ic_navigation_back"
                    android:tint="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"/>

            <TextView
                    android:layout_toEndOf="@+id/imgBack"
                    android:text="@string/create_account"
                    android:fontFamily="@font/muli_bold"
                    android:textColor="@color/colorAccent"
                    android:textSize="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"/>
        </RelativeLayout>

        <LinearLayout
                android:id="@+id/llMain"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:layout_centerInParent="true">

            <EditText
                    android:id="@+id/et_password"
                    style="@style/TextField.Rounded"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/muli_bold"
                    android:text="@={ viewModel.password }"/>

            <EditText
                    android:id="@+id/et_confirm_password"
                    style="@style/TextField.Rounded"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_password"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/muli_bold"
                    android:text="@={ viewModel.confirmPassword }"/>

            <Button
                    style="@style/Button.Rounded.Primary"
                    android:text="@string/login_button"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/btnCreateAccount"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/muli_bold"

                    android:onClick="@{ () -> viewModel.register() }"/>
        </LinearLayout>

        <ProgressBar
                android:id="@+id/loading"
                android:layout_centerInParent="true"
                android:visibility="@{ safeUnbox(viewModel.requestLoading) ? View.VISIBLE : View.GONE}"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

    </RelativeLayout>
</layout>
