<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CCFFFFFF">

    <LinearLayout
            android:background="@color/colorWhite"
            android:id="@+id/mainContent"
            android:padding="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

        <!--<androidx.appcompat.widget.AppCompatImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--app:srcCompat="@drawable/ic_add_photo"/>-->

        <!--<TextView-->
                <!--style="@style/PrimaryText"-->
                <!--android:textSize="25sp"-->
                <!--android:fontFamily="@font/muli_bold"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Susana Salazar"/>-->

        <!--<TextView-->
                <!--android:textColor="@color/colorSecondaryText"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textSize="25sp"-->
                <!--android:text="Técnico"/>-->

        <TextView
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:textColor="@color/colorSecondaryText"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:text="@string/text_notification_dialog"/>

        <Button
                android:id="@+id/btnYes"
                style="@style/Button.Rounded.Primary"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/text_yes"/>

        <Button
                android:id="@+id/btnNo"
                style="@style/Button.Rounded.Gray"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/text_no"/>

        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/closeNotificationDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_close_dialog"/>

    </LinearLayout>



</RelativeLayout>