<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable name="viewModel"
                  type="com.peruapps.icnclient.features.reset_password.presentation.ResetPasswordViewModel"/>
    </data>

    <RelativeLayout
            android:layout_marginTop="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".features.forgot_password.presentation.ForgotPasswordFragment">

        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="60dp"
                app:srcCompat="@drawable/logo_color"/>

        <TextView
                android:id="@+id/tv_title"
                android:layout_below="@+id/iv_logo"
                style="@style/AccentText"
                android:fontFamily="@font/muli_bold"
                android:textSize="25sp"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_recovery"/>

        <EditText
                android:id="@+id/etOldPassword"
                android:layout_below="@+id/tv_title"
                style="@style/TextField.Rounded"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:fontFamily="@font/muli_bold"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={ viewModel.password }"/>

        <EditText
                android:id="@+id/etNewPassword"
                android:layout_below="@+id/etOldPassword"
                style="@style/TextField.Rounded"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:fontFamily="@font/muli_bold"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={ viewModel.confirmPassword }"/>

        <ProgressBar
                android:visibility="@{ safeUnbox(viewModel.requestLoading) ? View.VISIBLE : View.GONE }"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="70dp"
                android:layout_centerHorizontal="true"/>

        <Button
                android:visibility="@{ safeUnbox(viewModel.requestLoading) ? View.GONE : View.VISIBLE }"
                style="@style/Button.Rounded.Primary"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="70dp"
                android:text="Entrar"
                android:textSize="20sp"
                android:onClick="@{ () -> viewModel.onClickResetPassword() }"/>

    </RelativeLayout>
</layout>